force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>ExpenseItems</relationshipName>
    <type>Lookup</type>
</CustomField>