force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ActivityExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityExpenseCategory__c</fullName>
    <label>Expense Category</label>
    <referenceTo>KimbleOne__ActivityExpenseCategory__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>ExpenseItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>