force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__Attendees__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Attendees__c</fullName>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>