force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExchangeRateBasis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExchangeRateBasis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate Basis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExchangeRateBasis</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Items (Exchange Rate Basis)</relationshipLabel>
    <relationshipName>ExpenseItemsExchangeRateBasis</relationshipName>
    <type>Lookup</type>
</CustomField>