force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseClaim__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Claim</label>
    <referenceTo>KimbleOne__ExpenseClaim__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>ExpenseItems</relationshipName>
    <type>Lookup</type>
</CustomField>