force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCost__c</fullName>
    <label>Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>