force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseGrossAmount__c</fullName>
    <label>Incurred Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>