force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseInternalCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseInternalCost__c</fullName>
    <label>Expense Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>