force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseItemStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Item Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseItemStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Items (Expense Item Status)</relationshipLabel>
    <relationshipName>ExpenseItemsStatus</relationshipName>
    <type>Lookup</type>
</CustomField>