force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseItemType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Item Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseItemType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Items (Expense Item Type)</relationshipLabel>
    <relationshipName>ExpenseItemsType</relationshipName>
    <type>Lookup</type>
</CustomField>