force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseNetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseNetAmount__c</fullName>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>