force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseReimbursementAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseReimbursementAmount__c</fullName>
    <label>Reimb Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>