force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseRevenue__c</fullName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>