force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__ExpenseUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseUnits__c</fullName>
    <label>Expense Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>