force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__IncurredCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncurredCurrencyIsoCode__c</fullName>
    <label>Incurred Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>