force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__IncurredCurrencyTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncurredCurrencyTaxAmount__c</fullName>
    <label>Incurred Currency Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>