force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__IncurredDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncurredDate__c</fullName>
    <label>Incurred Date</label>
    <type>Date</type>
</CustomField>