force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__IntInvCcyExpenseInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyExpenseInternalRevenue__c</fullName>
    <label>Expense Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>