force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__InvoiceItemStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceItemStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoiceItemStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Items (Invoice Status)</relationshipLabel>
    <relationshipName>ExpenseItemsInvoiceStatus</relationshipName>
    <type>Lookup</type>
</CustomField>