force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__InvoicingCurrencyExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyExpenseRevenue__c</fullName>
    <label>Invoicing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>