force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__IsReceipted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsReceipted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipted</label>
    <type>Checkbox</type>
</CustomField>