force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__OutboundInterfaceRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OutboundInterfaceRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Interface Run</label>
    <referenceTo>KimbleOne__OutboundInterfaceRun__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>ExpenseItems</relationshipName>
    <type>Lookup</type>
</CustomField>