force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__RevenueCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueCalculationMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Calculation Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseItemRevenueCalculationMethod</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Items (Revenue Calculation Method)</relationshipLabel>
    <relationshipName>ExpenseItems</relationshipName>
    <type>Lookup</type>
</CustomField>