force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__StartLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartLocation__c</fullName>
    <label>Start Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>