force-app/main/default/objects/KimbleOne__ExpenseItem__c/fields/KimbleOne__SupplierInvoicingCurrencyExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyExpenseCost__c</fullName>
    <label>Expense Supplier Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>