force-app/main/default/objects/KimbleOne__ExpenseItem__c/validationRules/KimbleOne__TrackingPeriodBusinessUnitGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__TrackingPeriodBusinessUnitGroup</fullName>
    <active>true</active>
    <description>Tracking Period on Expense item has same Business Unit Group context as the Resourced Activity</description>
    <errorConditionFormula>KimbleOne__TrackingTimePeriod__r.KimbleOne__BusinessUnitGroup__c &lt;&gt;  KimbleOne__ActivityExpenseCategory__r.KimbleOne__ResourcedActivity__r.KimbleOne__BusinessUnitGroup__c</errorConditionFormula>
    <errorMessage>Expense Item Tracking Period has invalid Business Unit Group context</errorMessage>
</ValidationRule>