force-app/main/default/objects/KimbleOne__ExpenseItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ExpenseClaim__c</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ExpenseItemType__c</columns>
    <columns>KimbleOne__TrackingTimePeriod__c</columns>
    <columns>KimbleOne__IncurredDate__c</columns>
    <columns>KimbleOne__ExpenseNetAmount__c</columns>
    <columns>KimbleOne__ExpenseItemStatus__c</columns>
    <columns>KimbleOne__ExpenseCost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>